Invoice and customers

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "barryvdh/laravel-dompdf": "^3.0",
         "laravel/framework": "^11.21.0",
         "laravel/tinker": "^2.9"
     },
